# IOT_Arm

./: .gitignore  .~lock.BOM.xlsx#  BOM.xlsx  README.md  SocketTrace.md  docker-compose.yaml  nginx.conf  summary.md
.github/: PlatformIOAction.yml
.github/workflows/: BackendBuilder.yml  FrontendBuilder.yml  PlatformIOAction.yml
CAD/: Full_Arm.SLDASM
CAD/Parts/Expo Marker/: Revolve Marker.stp
CAD/Parts/NEMA-17/: nema-17.cgr
backend/: Dockerfile  dbHelper.py  main.py  pyproject.toml  run.sh  tester.ipynb
code/: platformio.ini
code/src/: main.cpp
code/src/ApiCaller/: apiCaller.cpp  apiCaller.h
code/src/CoreComp/: CoreComp.cpp  CoreComp.h
firmware/: platformio.ini
firmware/src/: .main.cpp  Configuration.h  main.cpp
firmware/src/.Drafts/: .BinaryTransfer.cpp  .LCD.cpp  .SD.cpp
firmware/src/ApiCaller/: apiCaller.cpp  apiCaller.h
firmware/src/CoreComp/: CoreComp.cpp  CoreComp.h
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/comps/: GenericModal.tsx  HeartbeatBar.tsx  HeartbeatBars.tsx  LoginRedirect.tsx  ResponsiveAppBar.tsx
frontend/src/context/: socket.js
hardware/: README.md
hardware/Arm/: Arm.kicad_prl  Arm.kicad_pro  Arm.kicad_sch  fp-lib-table  sym-lib-table
hardware/assets/: Import Guide _ SnapEDA.html
hardware/assets/Import Guide _ SnapEDA_files/: -Usnri20bjViXBPy73gTZF9zKxNXrXN_qE6fmJCZVJM.js  2f4jrTw8sNc.html  64mXWlidpcw.html  68wbFvUjQvY.html  AyxHq_gL9sg.html  HvJnTwgkDwg.html  LmAzsCiBLCs.html  U0eaQQYukCw.html  VRrmLWeQ3uCcECxLw7VDjw  anchor.html  (+33 more)
(+8 files in other folders)
