[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Forsyth-Creations <robert.h.forsyth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
colorama = "^0.4.6"
uuid = "^1.30"
websockets = "^11.0.3"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
